<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/template"
    tools:context=".PurposeActivity">

    <Button
        android:id="@+id/myButton1"
        android:layout_width="262dp"
        android:layout_height="120dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/gbr1"
        android:text="@string/menjaga"
        android:background="@drawable/button_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/myButton2"
        android:layout_width="262dp"
        android:layout_height="120dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/gbr2"
        android:text="@string/menurutkan"
        android:background="@drawable/button_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/myButton3"
        android:layout_width="262dp"
        android:layout_height="120dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/gbr3"
        android:text="@string/menaikkan"
        android:background="@drawable/button_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

</androidx.constraintlayout.widget.ConstraintLayout>