<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/template"
    tools:context=".InformationActivity">

    <TextView
        android:id="@+id/selamat_dat"
        android:layout_width="323dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="136dp"
        android:gravity="top"
        android:text="@string/intro"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/jenisText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/jenis"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selamat_dat" />

    <AutoCompleteTextView
        android:id="@+id/gender"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:dropDownVerticalOffset="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jenisText" />

    <ImageView
        android:id="@+id/genderDropdownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/vector"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toTopOf="@+id/gender" />

    <TextView
        android:id="@+id/usiaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:text="@string/usia"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selamat_dat"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/age"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usiaText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tinggiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/tinggi"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/height"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tinggiText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/beratText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="20dp"
        android:text="@string/berat"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/tinggiText"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beratText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lvlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="28dp"
        android:text="@string/level_aktivitas"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        tools:ignore="MissingConstraints" />

    <AutoCompleteTextView
        android:id="@+id/activitylevel"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:dropDownVerticalOffset="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvlText" />

    <ImageView
        android:id="@+id/activityLevelDropdownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/vector"
        app:layout_constraintStart_toEndOf="@+id/activitylevel"
        app:layout_constraintTop_toTopOf="@+id/activitylevel" />

    <Button
        android:id="@+id/NextStep2"
        android:layout_width="186dp"
        android:layout_height="33dp"
        android:layout_below="@id/activityLevelDropdownButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button_signup"
        android:text="@string/lanjut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLevelDropdownButton"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
